--- a/Coming_Soon.html
+++ b/Coming_Soon.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="Images/Homepage/Logo/CineSpirit_Youtube_Thumbnail.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Cine+ Spirit Portfolio</title>
+    <title>CineSpirit</title>
     <link href="Coming_Soon.css" rel="stylesheet">
     <script src="/Javascript/jquery-3.5.1.js"></script>
 </head>
@@ -37,7 +37,7 @@
                             <a href="/index.html">
                                 <button class="header-btn">RETURN HOME</button>
                             </a><br>
-                            <img class="logo" src="Images/Homepage/Logo/Cine_Spirit_Logo_(White_White).png">
+                            <img class="logo" src="Images/Homepage/Logo/CineSpirit_Website_Logo_White_White.png">
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     hour = minute * 60,
                     day = hour * 24;
 
-                let birthday = "Jan 10, 2021 00:00:00",
+                let birthday = "Feb 20, 2021 00:00:00",
                     countDown = new Date(birthday).getTime(),
                     x = setInterval(function() {
 
