Project Slideshow - Addition
Feature Addition
- Homepage Project Slideshow - HTML, CSS and JavaScript

--- a/Sub-Categorys/Gaming/Arma_3_Dedicated_Server/Arma_3_Dedicated_Server.html
+++ b/Sub-Categorys/Gaming/Arma_3_Dedicated_Server/Arma_3_Dedicated_Server.html
@@ -70,9 +70,6 @@
                     <div class="intro-content">
                         <div class="intro-row">
                             <div class="intro-column-left">
-
-
-
                                 <h3>Introduction: What will be created...</h3>
                                 <p>The Goal of this tutorial will be to setup the Raspberry Pi Zero through USB and SSH. Therefore, we will be creating a SD Card Operating system and a Virtual Ethernet Connection.</p>
                                 <h3>Conclusion: What you will learn...</h3>
@@ -102,50 +99,55 @@
             <div class="con-how">
                 <div class="con-overlay">
                     <div class="container">
-                        <h1 class="con-con-header">Directions from A to Z <br>
-                            <hr class="con-con-line">
-                        </h1><br>
-                        <h3>Step 1</h3>
-                        <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p>
-                        <hr class="con-line">
-                        <h3>Step 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <hr class="con-line">
-                        <div class="con-media">
-                            <div class="con-row">
-                                <div class="con-column-left">
-                                    <h3>Step 3</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <hr class="con-line">
-                                    <h3>Step 4</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                </div>
-                                <div class="con-column-right">
-                                    <div class="con-vid">
-                                        <iframe class="con-vid-iframe" src="https://www.youtube.com/embed/yyyXp_8EXe8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="con-Tutorial">
+                            <div class="con-Tutorial-Left">
+                            <H1>Testing</H1>
+                            <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                            </div>
+                            <div class="con-Tutorial-Right">
+                                <div class="con-Tutorial-Text-Slides">
+                                    <div class="con-Tutorial-Text-Slide-Background">
+                                        <H1>Installing Steam CMD</H1>
+                                        <p>In this project you will connect up a Raspberry Pi computer and find out what hello it can do.</p>
+                                        <p>Note: this guide is an introduction to the Raspberry Pi computer, there are also detailed guides to Setting up your Raspberry Pi and Using your Raspberry Pi.</p>
+                                        <H1>What you will make</H1>
+                                        <p>The Raspberry Pi is a small computer that can do lots of things. You plug it into a monitor and attach a keyboard and mouse.</p>
+                                        <H1>What you will make</H1>
+                                        <p>This project covers elements from the following strands of the Raspberry Pi Digital Making Curriculum:</p>
+                                        <p>
+                                            <img class="con-Tutorial-Slide-Image" src="Images/2795953.jpg">
+                                        </p>
+                                        <H1>Additional information for educators</H1>
+                                        <p>f you need to print this project, please use the printer-friendly version.</p>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
                                     </div>
                                 </div>
+                                <div class="con-Tutorial-Text-Slides">
+                                    <div class="con-Tutorial-Text-Slide-Background">
+                                        <H1>Installing Steam CMD</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                        <H1>Hello</H1>
+                                        <p>You will learn how to Install Raspbian, edit Raspberry PI driver files and setup SSH. This will allow you to easily and efficiently setup your Raspberry PI without the use of any external accessories.</p>
+                                    </div>
+                                </div>
+                                <div class="con-tutorial-buttons" >
+                                    <button class="con-Tutorial-Button" onclick="plusSlides(-1)" style="text-align:"> &#10094;
+                                    </button>
+                                    <button class="con-Tutorial-Button" onclick="plusSlides(1)">Next Page &#10095;
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="con-quote">
-                            <h1>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</h1>
-                            <hr class="con-solid">
-                        </div>
-                        <h3>Step 5</h3>
-                        <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p>
-                        <hr class="con-line">
-                        <h3>Step 6: Cooling</h3>
-                        <p>"We had indications that H2O – the familiar water we know – might be present on the sunlit side of the Moon," Paul Hertz, director of the Astrophysics Division in the Science Mission Directorate at NASA Headquarters in Washington said. "Now we know it is there. This discovery challenges our understanding of the lunar surface and raises intriguing questions about resources relevant for deep space exploration."</p>
-                        <h3>Step 7</h3>
-                        <p>As released in a live conference Monday morning, NASA revealed the news saying the discovery brings the idea forth that water may be distributed across various areas of the surface of the Moon, rather than solely in the shadowed, cold areas.</p>
-                        <h3>Step 8</h3>
-                        <p>"We had indications that H2O – the familiar water we know – might be present on the sunlit side of the Moon," Paul Hertz, director of the Astrophysics Division in the Science Mission Directorate at NASA Headquarters in Washington said. "Now we know it is there. This discovery challenges our understanding of the lunar surface and raises intriguing questions about resources relevant for deep space exploration."</p>
-                        <div class="con-quote">
-                            <h1>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua".</h1>
-                            <hr class="con-solid">
-                        </div>
-                        <div class="con-end-vid">
-                            <iframe class="con-end-vid-iframe" src="https://www.youtube.com/embed/XaTmG708Mss" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -267,6 +269,34 @@
 
                     elm.onElementHeightChangeTimer = setTimeout(run, 200);
                 })();
+            }
+        </script>
+        <script>
+            var slideIndex = 1;
+            showSlides(slideIndex);
+
+            function plusSlides(n) {
+              showSlides(slideIndex += n);
+            }
+
+            function currentSlide(n) {
+              showSlides(slideIndex = n);
+            }
+
+            function showSlides(n) {
+              var i;
+              var slides = document.getElementsByClassName("con-Tutorial-Text-Slides");
+                var dots = document.getElementsByClassName("dot");
+              if (n > slides.length) {slideIndex = 1}    
+              if (n < 1) {slideIndex = slides.length}
+              for (i = 0; i < slides.length; i++) {
+                  slides[i].style.display = "none";  
+              }
+              for (i = 0; i < dots.length; i++) {
+                  dots[i].className = dots[i].className.replace(" active", "");
+              }
+              slides[slideIndex-1].style.display = "block";  
+              dots[slideIndex-1].className += " active";
             }
         </script>
     </div>
