--- a/index.html
+++ b/index.html
@@ -19,34 +19,36 @@
         <!-- Nav Bar -->
         <section>
             <nav class="topnav" id="myTopnav">
-                <img class="logo" onclick="window.location.href='../index.html'" src="/Images/Homepage/Logo/CineSpirit_Website_Logo_Text.png">
-                <a href="#contact">Contact</a>
-                <a href="#featured">Projects</a>
-                <a href="#curve">About</a>
-                <a href="index.html">Home</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
+                <div id="myNavlinks">
+                    <img id="myLogo" class="logo" onclick="window.location.href='../index.html'" src="/Images/Homepage/Logo/CineSpirit_Website_Logo_Text.png">
+                    <a id="myNavlink1" href="#contact">Contact</a>
+                    <a id="myNavlink2" href="#featured">Projects</a>
+                    <a id="myNavlink3" href="#curve">About</a>
+                    <a id="myNavlink4" href="index.html">Home</a>
+                    <a id="myNavlink5" href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
             </nav>
         </section>
         <!-- Header -->
         <section id="home">
             <div class="header">
                 <div class="header-overlay">
+                    <video autoplay muted loop id="header-video">
+                        <source src="Videos/Homepage/Colour_Gradeing_Test.mov" type="video/mp4">
+                    </video>
                     <div class="container">
                         <div class="header-text">
-                            <p class="header-text-1">BUILD WITH FREE IMAGINATION</p>
+                            <p class="header-text-1">WELCOME TO CINESPIRIT</p>
                             <p class="header-text-2">ONLINE PORTFOLIO<br> FOR CREATIVE PROJECTS</p>
-                            <p class="header-text-3">A Repository for tutorials</p>
+                            <p class="header-text-3">A Repository of Creative Digital Work </p>
                             <a href="#featured">
                                 <button class="header-btn">RECENT PROJECTS</button>
                             </a>
                             <button class="header-btn">RANDOM PROJECT</button>
                         </div>
                     </div>
-                    <svg id="curve" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 175.88">
-                        <path class="cls-1" d="M0,124.12s276.32,57,660.53,59.77S1400,124.12,1400,124.12V300H0Z" transform="translate(0 -126.12)" />
-                    </svg>
                 </div>
             </div>
         </section>
@@ -57,13 +59,13 @@
                     <div class="intro-row">
                         <div class="intro-column-left" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
                             <h1 class="intro-header">Hi, I'm<span style="color: #e63946"> Gerard</span></h1>
-                            <p class="intro-text">Aspiring <span style="color: rgb(252, 53, 101)">Web Developer</span>, <span style="color: rgb(252, 53, 101)">Programmer</span> and <span style="color: rgb(252, 53, 101)">2D Compositor</span> facinated in creating new and interesting Projects. </p>
+                            <p class="intro-text">Casual <span style="color: rgb(252, 53, 101)">Web Developer</span>, <span style="color: rgb(252, 53, 101)">Programmer</span> and <span style="color: rgb(252, 53, 101)">2D Compositor</span> facinated in creating new and interesting Projects. </p>
                             <p class="intro-text">Currently based in Hampshire, UK, specialising in<br>
                                 Digital Asset Management.<span style="color: black" ;></span></p>
                             <button class="intro-button">Check out my Speciality's</button>
                         </div>
-                        <div class="intro-column-right" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                            <img src="Images/Homepage/Portrait/Gerard_Marshall.png" class="intro-img">
+                        <div class="intro-column-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+                            <img src="/Images/Homepage/Portrait/Rendered_Image_Alpha_Complete.png" # class="intro-img" style="width: 500px;">
                         </div>
                     </div>
                 </div>
@@ -118,13 +120,13 @@
         <section>
             <div class="folio">
                 <div class="container">
-                        <div class="folio-head" id="featured" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
-                            <h2>We are continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
-                            <p>Below are the most recent technical projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
-                            <hr class="folio-solid"><br>
-                        </div>
-                    <div class="folio-row">
-                        <div class="folio-column" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
+                    <div class="folio-head" id="featured" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
+                        <h2>We are continually working to create new <span style="color: rgb(252,53,101)">Exciting Projects!</span></h2>
+                        <p>Below are the most recent technical projects, containing <span style="color: rgb(252,53,101)">Simple</span> and <span style="color: rgb(252,53,101)">Easy</span> instructions for all ages.</p>
+                        <hr class="folio-solid"><br>
+                    </div>
+                    <div class="folio-container fade" id="featured" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
+                        <div class="folio-slides" data-aos="fade-right" data-aos-delay="5000">
                             <a class="folio-link" href="Coming_Soon.html">
                                 <div class="folio-box">
                                     <img class="folio-img" src="/Images/Sub_Categorys/Gaming/Arma_3_Dedicated_Server/Arma3_Server_Setup_Thumbnail.png">
@@ -133,8 +135,6 @@
                                     <p class="folio-text-require">Steam CMD | TDSM | ARMA 3 </p>
                                 </div>
                             </a>
-                        </div>
-                        <div class="folio-column" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
                             <a class="folio-link" href="Coming_Soon.html">
                                 <div class="folio-box">
                                     <img class="folio-img" src="/Images/Sub_Categorys/Networking/Rasberry_Pi_Zero_Setup/Youtube%20Video%20Thumbnail%20RapberryPi%20Zerio%20Setup%20(Card).png">
@@ -143,22 +143,61 @@
                                     <p class="folio-text-require">PC/MAC | Micro USB Cable | SD Card </p>
                                 </div>
                             </a>
+                            <a class="folio-link" href="Coming_Soon.html">
+                                <div class="folio-box">
+                                    <img class="folio-img" src="Images/Sub_Categorys/Gaming/Minecraft_Bedrock_Server_Setup/Minecraft_Dedicated_Server_Thumbnail.png">
+                                    <p class="folio-text-header">Minecraft Bedrock Server | Switch Edition</p>
+                                    <p class="folio-text">Creating a Minecraft Bedrock Server configured for use with Windows/Consoles</p>
+                                    <p class="folio-text-require">PC | Minecraft Windows 10 | SD Card </p>
+                                </div>
+                            </a>
                         </div>
+                        <div class="folio-slides" data-aos="fade-right">
+                            <a class="folio-link" href="Coming_Soon.html">
+                                <div class="folio-box">
+                                    <img class="folio-img" src="/Images/Sub_Categorys/Networking/Home_Network_Samba_NAS/DIY_NAS_Storage_Youtube_Thumbnail.png">
+                                    <p class="folio-text-header">Home Network Samba NAS</p>
+                                    <p class="folio-text">Creating a Dedicated Arma 3 Server using a Windows Server PC.</p>
+                                    <p class="folio-text-require">Steam CMD | TDSM | ARMA 3 </p>
+                                </div>
+                            </a>
+                            <a class="folio-link" href="Coming_Soon.html">
+                                <div class="folio-box">
+                                    <img class="folio-img" src="Images/Homepage/TBA_Image.png">
+                                    <p class="folio-text-header">Pending Content</p>
+                                    <p class="folio-text">New Content will delivered soon an ETA can not specfied</p>
+                                    <p class="folio-text-require">TBA</p>
+                                </div>
+                            </a>
+                            <a class="folio-link" href="Coming_Soon.html">
+                                <div class="folio-box">
+                                    <img class="folio-img" src="Images/Homepage/TBA_Image.png">
+                                    <p class="folio-text-header">Pending Content</p>
+                                    <p class="folio-text">New Content will delivered soon an ETA can not specfied</p>
+                                    <p class="folio-text-require">TBA</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div style="text-align:center; padding: 20px">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
                     </div>
                 </div>
             </div>
+
         </section>
         <!-- Further Info -->
         <section>
-            
-            <div class="further" id="#contact" >
+
+            <div class="further" id="#contact">
                 <div class="container">
                     <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
-                    <h2 class="further-text">Any <span style="color:rgb(252,53,101">Projects</span> you think could be interesting?</h2>
-                    <a href="mailto:enquiries@cinespirit.uk">
-                        <button class="further-button">Contact Us</button>
-                    </a>
-                    <p class="further-text-con">Have any other <span style="color: rgb(252,53,101)">Questions?</span> See our <span style="color: rgb(252,53,101)">Q&A</span></p>
+                        <h2 class="further-text">Any <span style="color:rgb(252,53,101">Projects</span> you think could be interesting?</h2>
+                        <a href="mailto:enquiries@cinespirit.uk">
+                            <button class="further-button">Contact Us</button>
+                        </a>
+                        <p class="further-text-con">Have any other <span style="color: rgb(252,53,101)">Questions?</span> See our <span style="color: rgb(252,53,101)">Q&A</span></p>
                     </div>
                 </div>
             </div>
@@ -211,13 +250,14 @@
             var myVar;
 
             function myLoading() {
-                myVar = setTimeout(showPage, 1500);
+                myVar = setTimeout(showPage, 1000);
             }
 
             function showPage() {
                 document.getElementById("loader-wrapper").style.display = "none";
                 document.getElementById("myDiv").style.display = "block";
-                
+                document.getElementById("myNavlinks").style.display = "none";
+
             }
         </script>
         <!-- Sticky Nav Bar  -->
@@ -227,6 +267,9 @@
                 var currentScrollPos = window.pageYOffset;
                 if (prevScrollpos > currentScrollPos) {
                     document.getElementById("myTopnav").style.top = "0";
+                    document.getElementById("myTopnav").style.backgroundColor = "snow";
+                    document.getElementById("myNavlinks").style.display = "block";
+
                 } else {
                     document.getElementById("myTopnav").style.top = "-80px";
                 }
@@ -272,6 +315,29 @@
 
                     elm.onElementHeightChangeTimer = setTimeout(run, 200);
                 })();
+            }
+        </script>
+        <script>
+            var slideIndex = 0;
+            showSlides();
+
+            function showSlides() {
+                var i;
+                var slides = document.getElementsByClassName("folio-slides");
+                var dots = document.getElementsByClassName("dot");
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                slideIndex++;
+                if (slideIndex > slides.length) {
+                    slideIndex = 1
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex - 1].style.display = "flex";
+                dots[slideIndex - 1].className += " active";
+                setTimeout(showSlides, 5000); // Change image every 2 seconds
             }
         </script>
     </div>
